# jsondepnet

./: Cargo.toml  LICENSE  README.md  mise.toml
.github/workflows/: _test.yml  release.yml
src/: cache.rs  extract.rs  graph.rs  lib.rs  main.rs  output.rs  paths.rs
src/cmd/: cache.rs  list.rs  mod.rs  tree.rs
tests/: cli.rs
