[package]
name = "jsondepnet"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
jrsonnet-evaluator = "0.5.0-pre98"
jrsonnet-ir = "0.5.0-pre98"
jrsonnet-ir-parser = "0.5.0-pre98"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
