[package]
name = "jsondepnet"
version = "0.2.0"
authors = ["Sorah Fukumori <her@sorah.jp>"]
description = "Cacheable forward and reverse dependency tree for Jsonnet/libsonnet files"
keywords = ["jsonnet", "libsonnet", "dependencies", "cli"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/sorah/jsondepnet"
repository = "https://github.com/sorah/jsondepnet"
license = "MIT"
edition = "2024"
readme = "README.md"

[dependencies]
jrsonnet-evaluator = "0.5.0-pre98"
jrsonnet-ir = "0.5.0-pre98"
jrsonnet-ir-parser = "0.5.0-pre98"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
